# tartar_origins

./: .gitignore  .gitmodules  CMakeLists.txt  CmakeLists.txt  README.md
3dparty/: CmakeLists.txt
docs/attributes/: attributes.md  movement_attribute.md  player.md  position_attribute.md  self_attribute.md  todo.md  vision_attribute.md
plum/: README.md  build.sh  plum.h  plum_test.c
src/: CMakeLists.txt  CmakeLists.txt
src/client/: CMakeLists.txt  CmakeLists.txt  client.c  main.c  to_backend.h  to_client.c  to_client.h  to_client_command.c  to_client_command.h  to_utils.c  to_utils.h
src/core/: CmakeLists.txt  creature.txt  main.c  to_attribute.c  to_attribute.h  to_backend.h  to_character.c  to_character.h  to_core.h  to_entity.c  to_entity.h  to_packages.h  to_request_packages.h  to_response_packages.h  to_world.c  to_world.h
src/core/attribute/: to_attribute.c  to_attribute.h  to_attribute_info.h  to_attribute_type.h  to_attributes.h  to_effect_result.c  to_effect_result.h
src/core/attribute/all/: to_godly_hand.c  to_godly_hand.h  (+16 more)
src/desktop/: CmakeLists.txt  main.cpp  to_app.cpp  to_app.h
src/desktop/windows/: common_window.cpp  common_window.h  console_log.cpp  console_log.h  main_dockspace.cpp  main_dockspace.h  map_preview.cpp  map_preview.h  simulation_info.cpp  simulation_info.h  windows.h
src/game/: CmakeLists.txt  main.c  main.cpp
src/server/: CMakeLists.txt  CmakeLists.txt  main.c  server.c  to_backend.h  to_client.c  to_client.h  to_client_handle.c  to_client_handle.h  to_connection.c  to_connection.h  to_server.c  to_server.h
